Fri Jan 21 13:59:30 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/sql2tds.c:
	- workaround for DBD::ODBC

Fri Jan 21 12:37:00 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/cancel.c: not developing anymore
	* src/odbc/odbc.c: improve timeout
	* src/odbc/unittests/const_params.c: compile check
	* src/tds/net.c: small update

Thu Jan 20 17:17:20 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS TODO include/tds.h src/dblib/dblib.c src/odbc/odbc.c:
	* src/tds/config.c src/tds/login.c src/tds/mem.c:
	* src/tds/net.c src/tds/query.c src/tds/token.c:
	- timeout stuff improved, now works

Thu Jan 20 15:37:37 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/ctlib/blk.c src/ctlib/ct.c src/dblib/bcp.c:
	* src/dblib/dblib.c src/tds/query.c src/tds/tds_checks.c:
	* src/tds/token.c src/tds/util.c:
	- add TDS_READING state
	- fix changing state
	- fix cancelling
	* src/odbc/odbc.c: fix for possible link problem

Mon Jan 17 20:10:41 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* doc/api_status.txt src/odbc/odbc.c vms/odbc_driver_axp.opt:
	* win32/FreeTDS.def:
	- implemented SQLExtendedFetch
	* src/ctlib/ct.c:
	- ct_get_data
	 - fix null column
	 - fix a possible buffer overflow
	* src/dblib/dblib.c: small update

Sun Jan 16 10:45:05 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/bcp.c:
	- better quote
	- fix possible memory leak

Sat Jan 15 19:28:32 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS: update
	* src/tds/query.c TODO: limit max size

Fri Jan 14 11:52:45 EST 2005	JK Lowden <jklowden@schemamania.org>
	* src/apps/bsqldb.c corrected 'go' batch separator

Fri Jan 14 11:48:27 EST 2005	JK Lowden <jklowden@schemamania.org>
	* TODO updated
	* src/dblib/bcp.c quote column names

Fri Jan 14  9:05:08 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c:
	- quote database name in dbuse
	- removed useless casts
	* src/tds/query.c: