@@ -8,7 +8,7 @@ anyone else can post a patch to Source Forge.
 In this way we can communicate with each
 other about the project's priorities and needs.  
 
-To Do List	$Id: TODO,v 1.128 2005-01-20 16:18:44 freddy77 Exp $
+To Do List	$Id: TODO,v 1.129 2005-01-24 15:07:18 freddy77 Exp $
 ------------
 Broken:
 . Passing invalid character set names to server with tsql?
@@ -20,6 +20,8 @@ Working in progress:
 . ct_dynamic and friends needed for DBD::Sybase placeholder support
 . constants parameters in call syntax (ie {?=func(10,?)} ) 
 . logging bit flags to select levels and info types with defaults
+. support for named instances under mssql2k
+  . utility to get port
 
 Postponed to 0.64 version
 . log and call error handler on problems with tds_iconv_init().
@@ -57,8 +59,6 @@ For future versions (in priority order within library):
 . review the way parameters are packed 
   (too complicate, see ctlib bulk, cf "bulk copy and row buffer")
 . cursor support (limited support on ctlib)
-. support for named instances under mssql2k
-  . utility to get port
 . Autodetect TDS protocol when connecting (and cache somewhere?)
 . support for VARIANT type (requested one time, 2003-8-1)
 . support for NT named pipe (requested many time ago for mssql6.5 server, only
@@ -108,7 +108,6 @@ For future versions (in priority order within library):
 . use odbc_config if available
 . *W functions support (wide version, ODBC 3.51)
 . handle async flags ??
-. handle timeout (required by DBD::ODBC tests)
 
 . test and fix: hidden fields (FOR BROWSE select, see flag test on tds)
 . test: all binding types (input and output)
